feat: seperate gh-pages from prod build

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --base-href=/",
+    "build:prod": "ng build --prod --base-href=/",
+    "build:gh-pages": "ng build --prod --environment=prod:gh-pages --base-href=/z-motions",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "publish": "ng build --prod --base-href /z-motions && npx gh-pages -d dist"
+    "publish:gh-pages": "npm run build:gh-pages && npx gh-pages -d dist"
   },
   "private": true,
   "engines": {
